// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelMessage renders component 1`] = `
<Connect(Component)
  actionsOpen={false}
  message={
    Object {
      "channelId": "address",
      "createdAt": 123445789,
      "id": 1,
      "message": "example message",
      "pubKey": "ownPubKey",
      "signature": "secretsignature",
      "type": 1,
    }
  }
  setActionsOpen={[Function]}
>
  <WithStyles(ForwardRef(Grid))
    className="messageInput-mock"
    item={true}
  />
</Connect(Component)>
`;

exports[`ChannelMessage renders component when message is sent by owner 1`] = `
<Connect(Component)
  actionsOpen={false}
  message={
    Object {
      "channelId": "address",
      "createdAt": 123445789,
      "fromYou": true,
      "id": 1,
      "message": "example message",
      "pubKey": "ownPubKey",
      "signature": "secretsignature",
      "type": 1,
    }
  }
  setActionsOpen={[Function]}
>
  <WithStyles(ForwardRef(Grid))
    className="messageInput-mock"
    item={true}
  />
</Connect(Component)>
`;
